--- a/release/5.0/index.html
+++ b/release/5.0/index.html
@@ -39,6 +39,9 @@
 
 <link rel="shortcut icon" href="/images/bb-favicon.ico" type="image/png">
 
+<script>var clicky_site_ids = clicky_site_ids || []; clicky_site_ids.push(101238799);</script>
+<script async src="//static.getclicky.com/js"></script>
+
 <!-- HTML5 Shim and Respond.js IE8 support of HTML5 elements and media queries -->
 <!-- WARNING: Respond.js doesn't work if you view the page via file:// -->
 <!--[if lt IE 9]>
