--- a/guide/custom-certs/index.html
+++ b/guide/custom-certs/index.html
@@ -12,15 +12,14 @@
 <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Roboto&display=swap">
 
 <link rel="stylesheet" href="/css/syntax.css">
-
 <link rel="stylesheet" type="text/css" href="https://maxcdn.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css">
-<!--<link rel="stylesheet" type="text/css" href="css/bootstrap.min.css">-->
-<link rel="stylesheet" href="/css/modern-business.css">
+
 <!-- Latest compiled and minified CSS -->
-<link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css" integrity="sha384-BVYiiSIFeK1dGmJRAkycuHAHRg32OmUcww7on3RYdg4Va+PmSTsz/K68vbdEjh4u" crossorigin="anonymous">
+
+<link rel="stylesheet" href="/css/bootstrap.min.css">
 <link rel="stylesheet" href="/css/customstyles.css">
+<link rel="stylesheet" href="/css/navbar.css">
 <link rel="stylesheet" href="/css/sidebar.css">
-<link rel="stylesheet" href="/css/boxshadowproperties.css">
 <!-- most color styles are extracted out to here -->
 <link rel="stylesheet" href="/css/theme-blockbridge.css">
 
@@ -359,8 +358,8 @@ RewriteRule ^(.*)$ https://FQDN%{REQUEST_URI}
 <footer>
             <div class="row">
                 <div class="col-lg-12 footer">
-               &copy;2020 Blockbridge Networks LLC. All rights reserved. <br />
- Site last generated: Dec 8, 2020
+               &copy;2021 Blockbridge Networks LLC. All rights reserved. <br />
+ Site last generated: Mar 19, 2021
                 </div>
             </div>
 </footer>
